
* link:../use/manage-apps.html#tech-preview-define-an-application-using-a-kubernetes-custom-resource["Definieren Sie eine Anwendung mithilfe einer benutzerdefinierten Ressource"]
* link:../use/manage-buckets.html#tech-preview-manage-a-bucket-using-a-custom-resource["Definieren Sie den Bucket"]
* link:../use/protect-apps.html#create-a-backup["Sichern Sie Ihre Anwendung"]
* link:../use/protect-apps.html#create-a-snapshot["Erstellen Sie einen Snapshot"]
* link:../use/protect-apps.html#configure-a-protection-policy["Erstellen Sie Zeitpläne für Snapshots oder Backups"]
* link:../use/restore-apps.html["Stellen Sie eine Anwendung aus einem Snapshot oder einem Backup wieder her"]




== 7. November 2023 (23.10.0)

[[nas-eco-backup-restore]]
.Neue Funktionen und Support
* *Backup- und Restore-Funktionen für Applikationen mit ontap-nas-Economy Treiber-Backends*: Aktivieren Sie Backup- und Restore-Vorgänge für `ontap-nas-economy` Mit einigen https://docs.netapp.com/us-en/astra-control-center-2310/use/protect-apps.html#enable-backup-and-restore-for-ontap-nas-economy-operations["Einfache Schritte"^].
* *Unveränderliche Backups*: Astra Control unterstützt jetzt https://docs.netapp.com/us-en/astra-control-center-2310/concepts/data-protection.html#immutable-backups["Unveränderbare, schreibgeschützte Backups"^] Als zusätzliche Sicherheitsschicht gegen Malware und andere Bedrohungen.
* *Neu: Astra Control Provisioner*
+
In der Version 23.10 hat Astra Control eine neue Software-Komponente namens Astra Control Provisioner eingeführt, die für alle lizenzierten Astra Control Benutzer verfügbar sein wird. Mit Astra Control Provisioner erhalten Sie Zugriff auf umfassende Funktionen für erweitertes Management und Storage-Bereitstellung, die über den Funktionsumfang von Astra Trident hinausgehen. Diese Funktionen sind für alle Astra Control Kunden ohne zusätzliche Kosten verfügbar.

+
** *Erste Schritte mit Astra Control Provisioner*