@@ -3616,12 +3616,6 @@ Astra Control Provisioner wird automatisch im Rahmen des Imports und der Erkennu
   <block id="0db934fe5d747898582ef7b2fe037806" category="list-text">Cloud mit Cloud Volumes ONTAP zu On-Premises-Systemen</block>
   <block id="e83e31033bbd8a95537d872ec339409c" category="list-text">*Verbesserte Sicherheit des Speicher-Backends mit Kerberos 5-Verschlüsselung*: Sie können die Speichersicherheit durch verbessern<block ref="0a6b595cfc16ab1c35e55d5e4c214ee8" category="inline-link-rx"></block> Für den Datenverkehr zwischen dem gemanagten Cluster und dem Storage-Backend. Astra Control Provisioner unterstützt Kerberos-5-Verschlüsselung über NFSv4.1-Verbindungen von Red hat OpenShift-Clustern zu Azure NetApp Files und lokalen ONTAP Volumes</block>
   <block id="ac40c2ee060ee67bf0598e61daec4365" category="paragraph"><block ref="ac40c2ee060ee67bf0598e61daec4365" category="inline-image-macro-rx" type="image"></block></block>
-  <block id="2f2aafd7c2fcb81833aa47c5d9ab32fe" category="section-title">[Tech Preview] Erstellen Sie ein geplantes Backup von Namespaces</block>
-  <block id="765c75085cad598d9581b676be1b0e58" category="paragraph">Sie können ein geplantes, automatisches Backup aller Namespaces in einem Cluster erstellen. Diese Workflows werden von NetApp als CR-Dateien bereitgestellt, die mit einem Python-Skript gekoppelt sind. Bei der Konfiguration und Installation der Workflows werden Namespace-Backups automatisch nach einem Zeitplan erstellt, den Sie während der Installation auswählen. Sie können alle Namespaces in einem Cluster mit dem vollständigen Cluster-Backup-Workflow oder nur bestimmte Namespaces mit dem Label-basierten Backup-Workflow schützen.</block>
-  <block id="7ac3cce973f2aa843ace7b4ab0c5bb23" category="paragraph">Wenn ein neuer Namespace oder eine App, die in den Umfang Ihres Backup-Zeitplans fällt, zum Cluster hinzugefügt wird, wird dieser automatisch geschützt.</block>
-  <block id="261a331215e56ec7ab44a013797d15c5" category="paragraph-title">Beispiel: Vollständiges Cluster-Backup</block>
-  <block id="737358b56d0c0cdf08e1375d277d2218" category="paragraph">Wenn Sie beispielsweise den vollständigen Cluster-Backup-Workflow konfigurieren und installieren, werden alle Applikationen in einem Namespace regelmäßig und ohne weiteren Aufwand durch den Administrator gesichert. Der Namespace muss bei der Installation des Workflows nicht vorhanden sein; wenn ein Namespace in der Zukunft hinzugefügt wird, wird er geschützt.</block>
-  <block id="22359a586ea8864de01cfa7e01782716" category="paragraph-title">Beispiel: Label-basiertes Backup</block>
   <block id="ab9b4add4c2750df9ea518f6cfe58c09" category="paragraph">Für eine größere Granularität können Sie den labelbasierten Workflow verwenden. Sie können beispielsweise diesen Workflow installieren und Ihren Benutzern mitteilen, je nach Schutzstufe eine von mehreren Labels auf alle Namespaces anzuwenden, die sie schützen möchten. Auf diese Weise können Benutzer den Namespace mit einem dieser Labels erstellen, ohne dass sie einen Administrator benachrichtigen müssen. Der neue Namespace und alle darin Apps werden automatisch geschützt.</block>
   <block id="07b045e6ed11320210f203c982fd829d" category="section-title">Erstellen Sie ein geplantes Backup aller Namespaces</block>
   <block id="8332335e5e8bddc0b81921741539149a" category="paragraph">Sie können mithilfe des vollständigen Cluster-Backup-Workflows ein geplantes Backup aller Namespaces auf einem Cluster erstellen.</block>
@@ -3721,4 +3715,5 @@ Astra Control Provisioner wird automatisch im Rahmen des Imports und der Erkennu
   <block id="e84bb7e947a5b25481546110f575734a" category="list-text"><block ref="e84bb7e947a5b25481546110f575734a" category="inline-link-rx"></block></block>
   <block id="5858ee4031acd7b896faa2d3d2c1a299" category="inline-link">Cloud Insights-Dokumentation</block>
   <block id="2b93b48daf034e4100d00b85950e109d" category="list-text"><block ref="2b93b48daf034e4100d00b85950e109d" category="inline-link-rx"></block></block>
+  <block id="adeac59ad1862a3e0c4f40cfe863ae90" category="list-text"><block ref="adeac59ad1862a3e0c4f40cfe863ae90" category="inline-link-macro-rx"></block></block>
 </blocks>
