@@ -35,6 +35,7 @@ Nachdem Sie den installiert haben link:../get-started/install-astra-connector.ht
 
 * link:../use/manage-apps.html#tech-preview-define-an-application-using-a-kubernetes-custom-resource["Definieren Sie eine Anwendung mithilfe einer benutzerdefinierten Ressource"]
 * link:../use/manage-buckets.html#tech-preview-manage-a-bucket-using-a-custom-resource["Definieren Sie den Bucket"]
+* link:../use/back-up-full-cluster.html["Schützen Sie ein gesamtes Cluster"]
 * link:../use/protect-apps.html#create-a-backup["Sichern Sie Ihre Anwendung"]
 * link:../use/protect-apps.html#create-a-snapshot["Erstellen Sie einen Snapshot"]
 * link:../use/protect-apps.html#configure-a-protection-policy["Erstellen Sie Zeitpläne für Snapshots oder Backups"]
